# codex-autoresearch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  autoresearch.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: README.zh-CN.md  architecture.md  faq.md  nightly.md  research-notes.md
examples/: autoresearch.toml  nightly.yml
examples/demo-repo/: README.md  autoresearch.toml
scripts/: bootstrap.sh
src/codex_autoresearch/: __init__.py  cli.py  config.py  gittools.py  metrics.py  prompting.py  runner.py  ui.py
tests/: test_cli.py  test_config_and_prompt.py  test_metrics.py  test_presets.py  test_runner.py  test_runner_process.py  test_runner_setup.py  test_ui.py  test_watch.py
